[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-cache"
version = "0.1.0"
description = "Distributed cache over PostgreSQL with stampede protection via advisory locks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kelvin" }]
keywords = ["cache", "postgresql", "distributed-cache", "psycopg2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["psycopg2>=2.9"]

[project.urls]
Repository = "https://github.com/j_kel/postgres-cache"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require a real PostgreSQL connection (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["postgres_cache"]
omit = ["tests/*"]
